# Notenverwaltung

./: .gitignore  grades_export.csv  notenverwaltung.db  pyproject.toml
notenverwaltung/: app.py  course.py  database.py  grade.py  gradebook.py  main.py  storage.py  student.py
notenverwaltung/models/: course.py  grade.py
notenverwaltung/reports/: __init__.py  base.py  csv_report.py  text_report.py
notenverwaltung/storage/: __init__.py  base.py  memory_store.py  sqlite_store.py
tests/: test_course.py  test_grade.py  test_student.py
